# mcp-whatsapp

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  test_endpoints.py  test_groq.py  test_mcp.py
src/mcp_whatsapp/: __init__.py  server.py  wuzapi_client.py
