[project]
name = "mcp-whatsapp"
version = "1.0.0"
description = "MCP Server for WhatsApp via WuzAPI - Compatible with any AI (Claude, Gemini, etc.)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
mcp-whatsapp = "mcp_whatsapp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_whatsapp"]
